# recipe2pesto

./: pyproject.toml
recipe2pesto/: dict2pesto.py  main.py
