[tool.poetry]
name = "recipe2pesto"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.8"
scrape-schema-recipe = "^0.2.0"
parse-ingredients = "^0.0.3"
simplefractions = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
